2008-01-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/Makefile.am, posix/include/rtems/posix/cond.h,
	posix/include/rtems/posix/mutex.h, posix/inline/rtems/posix/cond.inl,
	posix/inline/rtems/posix/mutex.inl: Do not include POSIX Mutex or
	Condition Variable object get helpers because they are more
	complicated than the norm. They can implicitly perform a create. They
	cross the line as being too complex and large to inline since they
	negatively impact size and binary test coverage.
	* posix/src/condget.c, posix/src/mutexget.c: New files.

2008-01-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/Makefile.am: Add src/malloc_dirtier.c.
	* libcsupport/include/rtems/malloc.h: Add malloc dirty support.
	* libcsupport/src/malloc_p.h: Correct prototype.

2008-01-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/include/rtems/score/coremutex.h,
	score/src/coremutexseizeintr.c: Fix conditional code for inlining
	_CORE_mutex_Seize_interrupt_trylock() and add comments.

2008-01-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sapi/include/confdefs.h: Add CONFIGURE_MALLOC_DIRTY.

2008-01-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/Makefile.am, libcsupport/include/rtems/malloc.h,
	libcsupport/src/free.c, libcsupport/src/malloc.c,
	libcsupport/src/malloc_deferred.c,
	libcsupport/src/malloc_initialize.c, libcsupport/src/malloc_p.h,
	libcsupport/src/malloc_sbrk_helpers.c,
	libcsupport/src/posix_memalign.c: Place all deferred free code and
	place it in subroutines. Add plugin for dirtying allocated memory to
	assist in debugging. Clean up comments and spacing as needed.
	* libcsupport/src/malloc_dirtier.c: New file.

2008-01-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/objectgetnoprotection.c: Eliminate duplicate exit path code
	when there is an error.

2008-01-09	Jennifer Averett <jennifer.averett@OARcorp.com>

	* posix/src/keycreate.c, rtems/src/eventseize.c,