@@ -6,7 +6,7 @@
  */
 
 /*
- *  COPYRIGHT (c) 1989-2004.
+ *  COPYRIGHT (c) 1989-2007.
  *  On-Line Applications Research Corporation (OAR).
  *
  *  The license and distribution terms for this file may be
@@ -23,32 +23,6 @@
  *  @addtogroup ScoreWorkspace 
  *  @{
  */
-
-/**
- *  This routine returns the address of a block of memory of size
- *  bytes.  If a block of the appropriate size cannot be allocated
- *  from the workspace, then NULL is returned.
- */
-
-RTEMS_INLINE_ROUTINE void *_Workspace_Allocate(
-  size_t   size
-)
-{
-   return _Heap_Allocate( &_Workspace_Area, size );
-}
-
-/**
- *  This function frees the specified block of memory.  If the block
- *  belongs to the Workspace and can be successfully freed, then
- *  TRUE is returned.  Otherwise FALSE is returned.
- */
-
-RTEMS_INLINE_ROUTINE boolean _Workspace_Free(
-  void *block
-)
-{
-   return _Heap_Free( &_Workspace_Area, block );
-}
 
 /**@}*/
 
